--- a/mmg_remeshing_examples/use_cases/beam2D_internal_interpolation/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/beam2D_internal_interpolation/source/ProjectParameters.json
@@ -1,132 +1,165 @@
 {
     "problem_data"             : {
         "problem_name"    : "beam2D_internal_variables_interpolation_test",
+        "domain_size"     : 2,
+        "parallel_type"   : "OpenMP",
+        "start_time"      : 0.0,
+        "end_time"        : 0.09,
         "echo_level"      : 0
     },
-    "model_settings"           : {
-        "model_name"           : "beam2D_internal_variables_interpolation_test",
-        "dimension"            : 2,
-        "domain_parts_list"    : ["Parts_Parts_Auto1"],
-        "processes_parts_list" : ["Parts_Parts_Auto1","DISPLACEMENT_Displacement_Auto1","SelfWeight2D_Self_weight_Auto1"],
-        "input_file_settings"  : {
-            "name" : "beam2D_internal_variables_interpolation_test"
-        },
-        "variables":["NODAL_H","NODAL_AREA"],
-        "dofs": []
-    },
     "solver_settings"          : {
-        "solver_type"          : "solid_mechanics_implicit_dynamic_solver",
-        "Parameters"  : {
-            "time_settings"             : {
-                "time_step"  : 0.01,
-                "start_time" : 0.0,
-                "end_time"   : 0.09
-            },
-            "solving_strategy_settings" : {
-                "reform_dofs_at_each_step"    : true,
-                "convergence_criterion"       : "Residual_criterion",
-                "variable_relative_tolerance" : 0.0001,
-                "variable_absolute_tolerance" : 1e-9,
-                "residual_relative_tolerance" : 0.0001,
-                "residual_absolute_tolerance" : 1e-9,
-                "max_iteration"               : 10
+        "model_part_name"                    : "Structure",
+        "domain_size"                        : 2,
+        "solver_type"                        : "Dynamic",
+        "echo_level"                         : 0,
+        "time_integration_method"            : "implicit",
+        "scheme_type"                        : "newmark",
+        "model_import_settings"              : {
+            "input_type"       : "mdpa",
+            "input_filename"   : "beam2D_internal_variables_interpolation_test",
+            "input_file_label" : 0
+        },
+        "material_import_settings" :{
+            "materials_filename": "materials_2D.json"
+        },
+        "time_stepping"                      : {
+            "time_step" : 0.01
+        },
+        "line_search"                        : false,
+        "convergence_criterion"              : "residual_criterion",
+        "displacement_relative_tolerance"    : 0.0001,
+        "displacement_absolute_tolerance"    : 1e-9,
+        "residual_relative_tolerance"        : 0.0001,
+        "residual_absolute_tolerance"        : 1e-9,
+        "max_iteration"                      : 10,
+        "problem_domain_sub_model_part_list" : ["Parts_Parts_Auto1"],
+        "processes_sub_model_part_list"      : ["Parts_Parts_Auto1","DISPLACEMENT_Displacement_Auto1","SelfWeight2D_Self_weight_Auto1"]
+    },
+    "processes"        : {
+        "constraints_process_list" : [{
+            "python_module" : "assign_vector_variable_process",
+            "kratos_module" : "KratosMultiphysics",
+            "help"          : "This process fixes the selected components of a given vector variable",
+            "process_name"  : "AssignVectorVariableProcess",
+            "Parameters"    : {
+                "mesh_id"         : 0,
+                "model_part_name" : "Structure.DISPLACEMENT_Displacement_Auto1",
+                "variable_name"   : "DISPLACEMENT",
+                "value"           : [0.0,0.0,0.0],
+                "interval"        : [0.0,"End"]
+            }
+        }],
+        "loads_process_list"       : [{
+            "python_module" : "assign_vector_variable_process",
+            "kratos_module" : "KratosMultiphysics",
+            "help"          : "This process fixes all the components of a given vector variable",
+            "check"         : "DirectorVectorNonZero direction",
+            "process_name"  : "AssignVectorVariableProcess",
+            "Parameters"    : {
+                "mesh_id"         : 0,
+                "model_part_name" : "Structure.SelfWeight2D_Self_weight_Auto1",
+                "variable_name"   : "VOLUME_ACCELERATION",
+                "value"           : [0.0,-9.81,0.0],
+                "interval"        : [0.0,"End"]
+            }
+        }],
+        "recursive_remeshing_process" :[
+        {
+            "python_module"   : "mmg_process",
+            "kratos_module"   : "KratosMultiphysics.MeshingApplication",
+            "help"                  : "This process automatically remesh using MMG library",
+            "process_name"          : "MmgProcess",
+            "Parameters"            : {
+                "model_part_name"                  : "Structure",
+                "strategy"                         : "Hessian",
+                "hessian_strategy_parameters"              :{
+                    "metric_variable"                  : ["DISPLACEMENT"],
+                    "interpolation_error"              : 0.004
+                },
+                "framework"                            : "Lagrangian",
+                "internal_variables_parameters"        :
+                {
+                    "allocation_size"                      : 1000,
+                    "bucket_size"                          : 4,
+                    "search_factor"                        : 10,
+                    "interpolation_type"                   : "CPT",
+                    "internal_variable_interpolation_list" :["DAMAGE"]
+                },
+                "automatic_remesh"                 : true,
+                "automatic_remesh_parameters"      :{
+                    "automatic_remesh_type"            : "Ratio",
+                    "min_size_ratio"                   : 0.5,
+                    "max_size_ratio"                   : 1.0,
+                    "refer_type"                       : "Mean"
+                },
+                "initial_remeshing"                : false,
+                "step_frequency"                   : 9,
+                "enforce_current"                   : true,
+                "save_external_files"               : false,
+                "anisotropy_remeshing"              : false,
+                "anisotropy_parameters":{
+                    "hmin_over_hmax_anisotropic_ratio" : 0.1,
+                    "boundary_layer_max_distance"      : 1.0,
+                    "boundary_layer_min_size_ratio"    : 1.0,
+                    "interpolation"                    : "Linear"
+                },
+                "echo_level"                        : 0,
+                "debug_mode"                        : false
             }
         }
+        ]
     },
-    "constraints_process_list" : [{
-        "python_module" : "assign_vector_components_to_nodes_process",
-        "kratos_module" : "KratosMultiphysics.SolidMechanicsApplication",
-        "Parameters"    : {
-            "model_part_name" : "DISPLACEMENT_Displacement_Auto1",
-            "variable_name"   : "DISPLACEMENT",
-            "value"           : [0.0,0.0,0.0],
-            "interval"        : [0.0,"End"]
-        }
-    }],
-    "loads_process_list"       : [{
-        "python_module" : "assign_modulus_and_direction_to_nodes_process",
-        "kratos_module" : "KratosMultiphysics.SolidMechanicsApplication",
-        "Parameters"    : {
-            "model_part_name" : "SelfWeight2D_Self_weight_Auto1",
-            "variable_name"   : "VOLUME_ACCELERATION",
-            "modulus"         : 9.81,
-            "direction"       : [0.0,-1.0,0.0],
-            "interval"        : [0.0,"End"]
-        }
-    }],
-    "output_configuration"     : {
-        "result_file_configuration" : {
-            "gidpost_flags"       : {
-                "GiDPostMode"           : "GiD_PostBinary",
-                "WriteDeformedMeshFlag" : "WriteDeformed",
-                "WriteConditionsFlag"   : "WriteConditions",
-                "MultiFileFlag"         : "MultipleFiles"
-            },
-            "file_label"          : "step",
-            "output_control_type" : "step",
-            "output_frequency"    : 1,
-            "body_output"         : true,
-            "node_output"         : false,
-            "skin_output"         : false,
-            "plane_output"        : [],
-            "nodal_results"       : ["DISPLACEMENT","REACTION","VELOCITY","ACCELERATION"],
-            "gauss_point_results" : ["GREEN_LAGRANGE_STRAIN_TENSOR","CAUCHY_STRESS_TENSOR","VON_MISES_STRESS","PLASTIC_STRAIN"]
-        },
-        "point_data_configuration"  : []
-    },
-    "restart_options"          : {
-        "SaveRestart"      : false,
-        "RestartFrequency" : 0,
-        "LoadRestart"      : false,
-        "Restart_Step"     : 0
-    },
-    "constraints_data"         : {
-        "incremental_load"         : false,
-        "incremental_displacement" : false
-    },
-    "problem_process_list" :[
-    {
-        "python_module"   : "mmg_process",
-        "kratos_module"   : "KratosMultiphysics.MeshingApplication",
-        "help"                  : "This process automatically remesh using MMG library",
-        "process_name"          : "MmgProcess",
-        "Parameters"            : {
-            "model_part_name"                  : "beam2D_internal_variables_interpolation_test",
-            "strategy"                         : "Hessian",
-            "hessian_strategy_parameters"              :{
-                "metric_variable"                  : ["DISPLACEMENT"],
-                "interpolation_error"              : 0.004
-            },
-            "framework"                            : "Lagrangian",
-            "internal_variables_parameters"        :
-            {
-                "allocation_size"                      : 1000,
-                "bucket_size"                          : 4,
-                "search_factor"                        : 10,
-                "interpolation_type"                   : "LST",
-                "internal_variable_interpolation_list" :["PLASTIC_STRAIN"]
-            },
-            "automatic_remesh"                 : true,
-            "automatic_remesh_parameters"      :{
-                "automatic_remesh_type"            : "Ratio",
-                "min_size_ratio"                   : 0.5,
-                "max_size_ratio"                   : 1.0,
-                "refer_type"                       : "Mean"
-            },
-            "initial_remeshing"                : false,
-            "step_frequency"                   : 10,
-            "enforce_current"                   : true,
-            "save_external_files"               : false,
-            "anisotropy_remeshing"              : false,
-            "anisotropy_parameters":{
-                "hmin_over_hmax_anisotropic_ratio" : 0.1,
-                "boundary_layer_max_distance"      : 1.0,
-                "boundary_layer_min_size_ratio"    : 1.0,
-                "interpolation"                    : "Linear"
-            },
-            "echo_level"                        : 3,
-            "debug_mode"                        : true
-        }
+    "output_processes" : {
+        "gid_output" : [{
+            "python_module" : "gid_output_process",
+            "kratos_module" : "KratosMultiphysics",
+            "process_name"  : "GiDOutputProcess",
+            "help"          : "This process writes postprocessing files for GiD",
+            "Parameters"    : {
+                "model_part_name"        : "Structure.computing_domain",
+                "output_name"            : "beam2D_internal_variables_interpolation_test",
+                "postprocess_parameters" : {
+                    "result_file_configuration" : {
+                        "gidpost_flags"       : {
+                            "GiDPostMode"           : "GiD_PostBinary",
+                            "WriteDeformedMeshFlag" : "WriteDeformed",
+                            "WriteConditionsFlag"   : "WriteConditions",
+                            "MultiFileFlag"         : "MultipleFiles"
+                        },
+                        "file_label"          : "step",
+                        "output_control_type" : "step",
+                        "output_frequency"    : 1,
+                        "body_output"         : true,
+                        "node_output"         : false,
+                        "skin_output"         : false,
+                        "plane_output"        : [],
+                        "nodal_results"       : ["DISPLACEMENT","REACTION","VELOCITY","ACCELERATION"],
+                        "gauss_point_results" : ["DAMAGE"]
+                    },
+                    "point_data_configuration"  : []
+                }
+            }
+        }],
+        "vtk_output" : [{
+            "python_module" : "vtk_output_process",
+            "kratos_module" : "KratosMultiphysics",
+            "process_name"  : "VtkOutputProcess",
+            "help"          : "This process writes postprocessing files for Paraview",
+            "Parameters"    : {
+                "model_part_name"                    : "Structure.computing_domain",
+                "output_control_type"                : "step",
+                "output_frequency"                   : 1,
+                "file_format"                        : "ascii",
+                "output_precision"                   : 7,
+                "output_sub_model_parts"             : false,
+                "folder_name"                        : "vtk_output",
+                "save_output_files_in_folder"        : true,
+                "nodal_solution_step_data_variables" : ["DISPLACEMENT","REACTION","VELOCITY","ACCELERATION"],
+                "nodal_data_value_variables"         : [],
+                "element_data_value_variables"       : [],
+                "condition_data_value_variables"     : [],
+                "gauss_point_variables"              : ["DAMAGE"]
+            }
+        }]
     }
-    ]
 }
